fixed spacing between text elements

--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,7 @@ li {
 .section-banner.b-section {
   background-image: linear-gradient(349deg, #abc1ff 15%, #cc9efe 83%);
   height: auto;
+  display: flex;
   min-height: 40vh;
   padding-top: 50px;
   padding-bottom: 50px;
@@ -928,7 +929,7 @@ li {
   margin-bottom: 20px;
   font-family: 'Open Sans', sans-serif;
   font-size: 30px;
-  text-align: left;
+  text-align: center;
 }
 
 .column {
@@ -1376,6 +1377,7 @@ li {
 
 .heading-personas {
   margin-bottom: 40px;
+  margin-top: 40px;
   font-family: 'Open Sans', sans-serif;
   font-size: 26px;
   text-align: center;
@@ -2347,7 +2349,7 @@ li {
   position: static;
   display: block;
   width: 100%;
-  margin-bottom: 80px;
+  margin-bottom: 60px;
   -webkit-box-pack: start;
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
@@ -2626,11 +2628,6 @@ li {
 
   .image-34 {
     max-width: 60%;
-  }
-
-  .paragraph-five {
-    font-size: 16px;
-    max-width: 90%;
   }
 
   .heading-21 {
@@ -4329,6 +4326,15 @@ li {
     padding-top: 20px;
     text-align: center;
   }
+  .heading-six.light {
+    color: #ffffff;
+    width: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+    text-align: center;
+  }
 
   .column {
     height: auto;
@@ -4434,7 +4440,7 @@ li {
   }
 
   .heading-personas {
-    margin-top: auto;
+    margin-top: 40px;
     margin-bottom: 40px;
     text-align: center;
   }
@@ -4783,6 +4789,21 @@ li {
     -ms-grid-row: 1;
     grid-row-start: 1;
   }
+
+  .heading-six.light {
+    color: #ffffff;
+    width: auto;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    padding-top: 0px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 30px;
+    text-align: center;
+  }
+
+.container-2.rentme{
+  width: 80%;
+}
 
   #w-node-_28fea1dd-9286-00cb-6c67-167a362f0adc-b372f115 {
     -ms-grid-column-span: 1;
